# nova

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: PRD.md  SPEC.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: projects.rs  settings.rs
src-tauri/src/db/: mod.rs
src/components/: TaskBar.tsx  layout.tsx
src/components/lore/: LoreSidebar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx
src/db/: schema.sql
src/db/migrations/: 001_init.ts
src/lib/: db.ts  utils.ts
src/pages/: Dashboard.tsx  EditorView.tsx  OutlineView.tsx  ProjectSetup.tsx  Settings.tsx
src/services/deepseek/: client.ts  index.ts
src/services/prompt/: builder.ts  index.ts
src/stores/: generationStore.ts  projectStore.ts  settingsStore.ts
src/types/: index.ts
